# Simulator

./: README.md  frames_2024-10-13_06.26.00.gv  frames_2024-10-16_17.16.15.gv  frames_2024-10-17_11.41.48.gv  test.sdf
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/gazebo_dev/share/gazebo_dev/: package.bash  package.zsh
install/uno/share/ament_index/resource_index/package_run_dependencies/: uno
install/uno/share/ament_index/resource_index/parent_prefix_path/: uno
install/uno/share/uno/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.ps1  package.sh  package.xml  package.zsh
install/uno/share/uno/cmake/: unoConfig-version.cmake  unoConfig.cmake
install/uno/share/uno/config/: controller.yaml  map.yaml  mapper.yaml  nav2.yaml  rgbd_cam.rviz  robot.rviz  slam.yaml
install/uno/share/uno/environment/: ament_prefix_path.dsv  path.dsv
install/uno/share/uno/launch/: display.robot.launch.py  map.save.launch.py  navigation.robot.launch.py
install/uno/share/uno/meshes/: model.config  model.dae  model.sdf
install/uno/share/uno/meshes/box/: model.config  model.sdf
install/uno/share/uno/meshes/man/: model.config  model.sdf
install/uno/share/uno/meshes/meshes/: cardboard_box.dae
install/uno/share/uno/meshes/rack/: model.config  model.sdf
install/uno/share/uno/sdf/: empty_room.sdf  simple_warehouse.sdf  warehouse.sdf
install/uno/share/uno/urdf/: diff_drive_robot.urdf  roberto.urdf
log/: latest_build
src/install/: local_setup.sh  setup.sh
src/install/uno/share/uno/: local_setup.dsv  package.dsv  package.sh
src/install/uno/share/uno/sdf/: simple_warehouse.sdf  (+1 more)
src/log/: latest_build
src/uno/: CMakeLists.txt
src/uno/config/: controller.yaml  mapper.yaml  rgbd_cam.rviz  slam.yaml
src/uno/launch/: display.robot.launch.py  map.save.launch.py
src/uno/sdf/: empty_room.sdf  simple_warehouse.sdf  warehouse.sdf
src/uno/urdf/: diff_drive_robot.urdf  roberto.urdf
(+7 files in other folders)
